@@ -1,35 +1,0 @@
-# Apache configuration for GlassPlayerHost
-#
-## (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
-##
-##   This program is free software; you can redistribute it and/or modify
-##   it under the terms of the GNU General Public License version 2 as
-##   published by the Free Software Foundation.
-##
-##   This program is distributed in the hope that it will be useful,
-##   but WITHOUT ANY WARRANTY; without even the implied warranty of
-##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-##   GNU General Public License for more details.
-##
-##   You should have received a copy of the GNU General Public
-##   License along with this program; if not, write to the Free Software
-##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-##
-
-<Directory @localstatedir@>
-	allow from all
-	DirectoryIndex index.html
-	AuthType Basic
- 	AuthName GlassPlayer
-	AuthBasicProvider file
- 	AuthUserFile /etc/httpd/conf.d/glassplayerhost.htpasswd
-	Require valid-user
-</Directory>
-<Directory @libexecdir@>
-	allow from all
-	AuthType Basic
- 	AuthName GlassPlayer
-	AuthBasicProvider file
- 	AuthUserFile /etc/httpd/conf.d/glassplayerhost.htpasswd
-	Require valid-user
-</Directory>
