@@ -1,0 +1,4 @@
+[WebHostUser1]
+Realm=GlassPlayer
+Name=user
+Password=
